src/test/ui/reachable/expr_while.stderr
error: unreachable block in `while` expression
  --> $DIR/expr_while.rs:7:20
   |
LL |       while {return} {
   |  ____________------__^
   | |            |
   | |            diverging due to this
LL | |
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^ unreachable block in `while` expression
   |
note: lint level defined here
  --> $DIR/expr_while.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable block in `while` expression
  --> $DIR/expr_while.rs:22:20
   |
LL |       while {return} {
   |  ____________------__^
   | |            |
   | |            diverging due to this
LL | |
LL | |         println!("I am dead.");
LL | |     }
   | |_____^ unreachable block in `while` expression

error: aborting due to 2 previous errors

